--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-unit-tests/test.js
+test/test.js
 demo/jawz-scrape.php
 demo/yakyak-chat.arc
 demo/yakyak-chat.json
 demo/yakyak-online.json
 jquery-ui-1.9m2/
+dist
+.DS_Store
